/iTrade/ChangeLog
===============================================================================

On the road for v0.4.5 (Nausicaa)

===============================================================================

2006-11-12  Gilles Dumortier <dgil at ieee.org>
	* Add a value: can't select it by isin and ticker (SF bug 1591336) in
	  lowercase
	* Add new menu in toolbar --> Options (SF bug 1594194)

2006-11-11  Gilles Dumortier <dgil at ieee.org>
	* Portfolio management : not all trades values (SF bug 1594183)
	* Nyse Market : error with special tickers (SF bug 1593243)
	* Amex/Nyse Markets : Invalid literal for float():N/A (SF bug 1594249)

2006-11-09  Gilles Dumortier <dgil at ieee.org>
	* Nyse Market : error with special tickers (SF bug 1593243)

2006-11-08  Gilles Dumortier <dgil at ieee.org>
	* Start working on the Graphic Tools ...
	* valueError Brussels Libre Market (SF bug 1592266)
	* Select/List Quote : invalid icon (SF bug 1592758)
	* wxPython 2.7 : icons look bad in the toolbars (SF bug 1586180)
	* Add a value: no possible when sorted (SF bug 1591293)
	* Value error: invalid literal for long() (SF bug 1592003)

2006-11-05  Gilles Dumortier <dgil at ieee.org>
	* Quotes.txt - missing Indices & Trackers for Euronext (SF bug 1590916)
	* Select Quote : bad select item (SF bug  1590074)
	* Euronext quotes - display only Euronext Paris !? (SF bug 1589626)
		key : <ISINorTICKER>.<EXCHANGE>.<PLACE>
	* Marche Libre - ValueError (SF bug 1590367)

2006-11-03  Gilles Dumortier <dgil at ieee.org>
	* "official" tarball for testing
	* Backend WXAgg -> WX (better perf + remove unicode dependancy)
	* Specific connector for deffered prices (SF bug 1589922)
	* Download EURONEXT list of quotes : use the MEP (SF bug 1589626)

2006-11-02  Gilles Dumortier <dgil at ieee.org>
	* Experimental Binary Package : 8 to 9 M bytes (SF bug 1477443)
	* Property View : should be independent (SF bug 1589102)
	* Fix a bug when a quote has more than 1 property to save
